--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 token:
   expiration_time: 86400000
-  secret: user_token_native@naver.com
+  secret: user_token_native#1@naver.com
  
 gateway:
   ip: localhost
