--- a/ecommerce-dev.yml
+++ b/ecommerce-dev.yml
@@ -1,3 +1,9 @@
+spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: 1234
 token:
   expiration_time: 86400000
   secret: de123v#1@naver.com
