--- a/ecommerce-dev.yml
+++ b/ecommerce-dev.yml
@@ -12,4 +12,6 @@ gateway:
   ip: localhost
 
 order_service:
-  url: http://localhost:8000/order-service/%s/orders
+  url: http://3.36.153.217:8000/order-service/%s/orders
+user_service:
+  url: http://3.37.6.222/user-service/%s/users
